fix: document Java gatherer preview requirements